--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.19",
+    "@primeuix/themes": "^1.2.5",
     "express": "^4.18.2",
     "firebase": "^12.5.0",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.4",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.1.4",
+    "tailwindcss-primeui": "^0.6.1",
+    "@tailwindcss/postcss": "^4.1.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
